--- a/client/.prettierrc
+++ b/client/.prettierrc
@@ -1,7 +1,9 @@
 {
-    "semi": false,
-    "trailingComma": "es5",
-    "singleQuote": true,
-    "tabWidth": 2,
-    "useTabs": false
+  "semi": true,
+  "trailingComma": "es5",
+  "singleQuote": true,
+  "printWidth": 80,
+  "tabWidth": 2,
+  "bracketSameLine": true,
+  "useTabs": false
 }
