--- a/client/package.json
+++ b/client/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "next": "14.0.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-hook-form": "^7.49.2",
+    "sass": "^1.69.5"
   },
   "devDependencies": {
     "@types/node": "^20",
