--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -12,12 +12,14 @@
   "plugins": [
     "react",
     "@typescript-eslint",
-    "@typescript-eslint/eslint-plugin"
+    "@typescript-eslint/eslint-plugin",
+    "effector"
   ],
   "extends": [
     "next/core-web-vitals",
     "plugin:@typescript-eslint/recommended",
-    "plugin:prettier/recommended"
+    "plugin:prettier/recommended",
+    "plugin:effector/react"
   ],
   "rules": {
     "prettier/prettier": [
