--- a/client/package.json
+++ b/client/package.json
@@ -9,24 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/node": "^20.10.5",
+    "@types/react": "^18.2.45",
+    "@types/react-dom": "^18.2.18",
     "axios": "^1.6.2",
+    "effector": "^22.7.0",
+    "effector-next": "^1.3.3",
+    "effector-react": "^22.5.1",
+    "eslint-plugin-effector": "^0.12.0",
     "next": "14.0.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "nextjs-progressbar": "^0.0.16",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-toastify": "^9.1.3",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "sass": "^1.69.5"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.15.0",
+    "@typescript-eslint/parser": "^6.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.0.1",
     "prettier": "^3.1.1",
-    "typescript": "^5"
+    "typescript": "^5.3.3"
   }
 }
