--- a/client/package.json
+++ b/client/package.json
@@ -16,15 +16,17 @@
     "effector": "^22.7.0",
     "effector-next": "^1.3.3",
     "effector-react": "^22.5.1",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "14.0.4",
     "eslint-plugin-effector": "^0.12.0",
+    "framer-motion": "^11.0.3",
     "next": "14.0.4",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
+    "react-select": "^5.8.0",
     "react-toastify": "^9.1.3",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
     "sass": "^1.69.5"
   },
   "devDependencies": {
