--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^20.10.5",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.18",
+    "@types/react-slick": "^0.23.13",
     "axios": "^1.6.2",
     "effector": "^22.7.0",
     "effector-next": "^1.3.3",
@@ -26,8 +27,10 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-select": "^5.8.0",
+    "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^6.15.0",
