--- a/client/.eslintrc.json
+++ b/client/.eslintrc.json
@@ -28,6 +28,7 @@
         "endOfLine": "auto"
       }
     ],
+    "@typescript-eslint/switch-exhaustiveness-check": "error",
     "@typescript-eslint/no-unused-vars": "error",
     "@typescript-eslint/no-explicit-any": "error",
     "@typescript-eslint/quotes": [
