--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.2",
     "react-paginate": "^8.2.0",
+    "react-range": "^1.8.14",
     "react-select": "^5.8.0",
     "react-slick": "^0.30.2",
     "react-toastify": "^9.1.3",
